--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 	"webhook": null,
 	"sort": null,
 	"time": null,
-	"items_per_page": null,
-	"amount_of_pages": null,
-    	"subreddits": null
+	"itemsPerPage": null,
+	"amountOfPages": null,
+    "subreddits": null
 }
